--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10,8 +10,8 @@ body {
  width:800px;
  margin: 0 auto 0 auto;
  background-color: #000000;
- position: fixed;
- top: 0px;
+ position: relative;
+ padding-bottom: 10px;
 }
 			#navegacion {
 			 font-family: 'Poppins',san serif;
@@ -22,7 +22,58 @@ body {
 			 float: left;
 			 font-size: 16px;
 			 word-spacing: 10px;
-			}		
+			}
+							.nav{
+								width: 590px;
+								margin: 0 auto;
+								background-color: #000000;
+								line-height: 5px;
+							}
+
+							.nav ul{
+								list-style: none;
+								margin: 0 auto;
+							}
+
+							.menu > li{
+								position: relative;
+								display: inline-block;
+							}
+
+							.menu > li > a{
+								display: block;
+								padding: 10px 10px;
+								color: #fee300;
+								font-family: 'Poppins',san serif;
+								text-decoration: none;
+							}
+
+							.menu li a:hover {
+								color: #000000;
+								background-color: #fee300;
+								transition: all .3s;
+							}
+
+							/*****SUBMENU*****/
+
+							.sub{
+								position: absolute;
+								background-color: #fee300;
+								width: 140%;
+								display: none;
+							}
+
+							.sub li a {
+								display: block;
+								padding: 15px;
+								color: #000000;
+								font-family: 'Poppins',san serif;
+								text-decoration: none;
+							}
+
+							.menu li:hover .sub {
+								display: block;
+							}
 			#buscador{
 			 font-family: 'Poppins',san serif;
 			 width:190px;
@@ -43,7 +94,6 @@ body {
 #cabecera {
  width:800px;
  height: 300px;
- margin: 30px 0 auto 0px;
  background-image: url("../img/cabecera.jpg");
  background-position: top center;
  background-repeat: no-repeat; 
